apps/test/echo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: echo-app.test.snctm.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-app
            port:
              number: 80
  tls:
  - hosts:
    - echo-app.test.snctm.it
    secretName: test-local-snctm-it-tls
